--- a/templates/home.html
+++ b/templates/home.html
@@ -90,8 +90,8 @@ function showContent(content) {
         <p>Pick one!</p>
         <div class="left">
           <button class="btn btn-extra is-primary" onclick="location.href='/download/caz_mouse.exe'">Windows</button>
-          <button class="btn btn-extra is-success" onclick="location.href='/download/caz_mouse_for_mac'">MacOS</button>
-          <button class="btn btn-extra is-warning" onclick="alert('sorry not available yet">Linux/Debian</button>
+          <button class="btn btn-extra is-success" onclick="alert('sorry not available yet')">MacOS</button>
+          <button class="btn btn-extra is-warning" onclick="alert('sorry not available yet')">Linux/Debian</button>
           <button class="btn btn-extra" onclick="showContent('home')">GO BACK</button>
         </div>
       </div>
