add mobile error html

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,6 +34,17 @@
 .btn-extra {
     width: 250px;
 }
+.header {
+    width: 100%;
+    bottom: 0px;
+    font-size: 1.2em;
+    height: 40px;
+    left: 0px;
+    top: 0px;
+    position: fixed;
+    right: 0px;
+    text-align: center;
+}
 .footer {
     width: 100%;
     bottom: 0px;
@@ -47,6 +58,9 @@
 }
 .display-none {
     display: none;
+}
+.link {
+  padding: 0 50px 0 50;
 }
   </style>
   <script>
@@ -70,6 +84,10 @@ function showContent(content) {
 }
   </script>
   <body>
+    <div class="header">
+      <a class="link" href="https://github.com/royroy21/caz_mouse_website">visit website code</a>
+      <a class="link" href="https://github.com/royroy21/random_mouse_moving_app">visit mouse pointer code</a>
+    </div>
     <div class="containers outside">
       <div id="home" class="container is-rounded content">
         <div class="right">
