prettify mobile error

--- a/templates/mobile_error.html
+++ b/templates/mobile_error.html
@@ -6,11 +6,17 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
       <title>CazMouse</title>
   </head>
+  <style>
+.content {
+  padding: 25px;
+  background-color: lightblue;
+}
+  </style>
   <body>
-    <div>
+    <div class="content">
       <p>
-        "I'm sorry but this device dosn't use a pointer"
-        "Come back when you have a real computer"
+        I'm sorry but this device dosn't use a pointer Come back when you have a real computer
+      </p>
       <i class="octocat animate right"></i>
     </div>
   </body>
