--- a/templates/mobile_error.html
+++ b/templates/mobile_error.html
@@ -10,12 +10,13 @@
 .content {
   padding: 25px;
   background-color: lightblue;
+  height: 100%;
 }
   </style>
   <body>
     <div class="content">
       <p>
-        I'm sorry but this device dosn't use a pointer Come back when you have a real computer
+        I'm sorry but this device dosn't use a pointer. Come back when you have a real computer :)
       </p>
       <i class="octocat animate right"></i>
     </div>
