format mobile error text q

--- a/templates/mobile_error.html
+++ b/templates/mobile_error.html
@@ -15,9 +15,8 @@
   </style>
   <body>
     <div class="content">
-      <p>
-        I'm sorry but this device dosn't use a pointer. Come back when you have a real computer :)
-      </p>
+      <p>I'm sorry but this device dosn't use a mouse pointer</p><br />
+      <p>Come back when you have a real computer :)</p>
       <i class="octocat animate right"></i>
     </div>
   </body>
