--- a/templates/home.html
+++ b/templates/home.html
@@ -59,8 +59,15 @@
 .display-none {
     display: none;
 }
-.link {
-  padding: 0 50px 0 50;
+.link_container {
+  width: 50%;
+}
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+  color: #fff8ec;
 }
   </style>
   <script>
@@ -85,8 +92,8 @@ function showContent(content) {
   </script>
   <body>
     <div class="header">
-      <a class="link" href="https://github.com/royroy21/caz_mouse_website">visit website code</a>
-      <a class="link" href="https://github.com/royroy21/random_mouse_moving_app">visit mouse pointer code</a>
+      <div class="link_container left"><a class="link" href="https://github.com/royroy21/caz_mouse_website">visit this website's source code</a></div>
+      <div class="link_container right"><a class="link" href="https://github.com/royroy21/random_mouse_moving_app">visit mouse pointer app source code</a></div>
     </div>
     <div class="containers outside">
       <div id="home" class="container is-rounded content">
@@ -95,7 +102,7 @@ function showContent(content) {
         </div>
         <div>
           <h1>CazMouse&#8482;</h1>
-          <p>The moving mouse pointer app</p>
+          <p>The mouse pointer moving app</p>
         </div>
         <div class="left">
           <button class="btn btn-extra is-warning" onclick="showContent('explain1')">EXPLAIN</button>
@@ -107,7 +114,7 @@ function showContent(content) {
       <div id="download" class="container is-rounded content display-none">
         <p>Pick one!</p>
         <div class="left">
-          <button class="btn btn-extra is-primary" onclick="location.href='/download/caz_mouse.exe'">Windows</button>
+          <button class="btn btn-extra is-primary" onclick="location.href='/download/caz_mouse_for_windows.zip'">Windows</button>
           <button class="btn btn-extra is-success" onclick="alert('sorry not available yet')">MacOS</button>
           <button class="btn btn-extra is-warning" onclick="alert('sorry not available yet')">Linux/Debian</button>
           <button class="btn btn-extra" onclick="showContent('home')">GO BACK</button>
@@ -141,7 +148,7 @@ function showContent(content) {
             <button class="btn btn-extra" onclick="showContent('explain4')">GO ON...</button>
           </div>
           <div class="right">
-            <button class="btn btn-extra is-primary" onclick="showContent('download')">BORED NOW</button>
+            <button class="btn btn-extra is-primary" onclick="showContent('download')">DOWNLOAD</button>
           </div>
         </div>
       </div>
@@ -153,7 +160,7 @@ function showContent(content) {
             <button class="btn btn-extra" onclick="showContent('explain5')">AWWW!</button>
           </div>
           <div class="right">
-            <button class="btn btn-extra is-primary" onclick="showContent('explain5')">WHATEVER</button>
+            <button class="btn btn-extra is-primary" onclick="showContent('explain5')">DOWNLOAD</button>
           </div>
         </div>
       </div>
@@ -165,13 +172,13 @@ function showContent(content) {
             <button class="btn btn-extra" onclick="showContent('download')">OKAY THANKS!</button>
           </div>
           <div class="right">
-            <button class="btn btn-extra is-primary" onclick="showContent('download')">CAN I GO NOW?</button>
+            <button class="btn btn-extra is-primary" onclick="showContent('download')">DOWNLOAD</button>
           </div>
         </div>
       </div>
     </div>
     <div class="footer">
-        <p>A RogDog Production</p>
+      <p>A RogDog Production</p>
     </div>
   </body>
 </html>
