--- a/templates/mobile_error.html
+++ b/templates/mobile_error.html
@@ -9,14 +9,14 @@
   <style>
 .content {
   padding: 25px;
-  background-color: lightblue;
+  background-color: blue;
   height: 100%;
 }
   </style>
   <body>
     <div class="content">
       <p>I'm sorry but this device dosn't use a mouse pointer</p><br />
-      <p>Come back when you have a real computer :)</p>
+      <p>Come back when you have a real computer :)</p><br />
       <i class="octocat animate right"></i>
     </div>
   </body>
