fix template error

--- a/templates/home.html
+++ b/templates/home.html
@@ -160,7 +160,7 @@ function showContent(content) {
             <button class="btn btn-extra" onclick="showContent('explain5')">AWWW!</button>
           </div>
           <div class="right">
-            <button class="btn btn-extra is-primary" onclick="showContent('explain5')">DOWNLOAD</button>
+            <button class="btn btn-extra is-primary" onclick="showContent('download')">DOWNLOAD</button>
           </div>
         </div>
       </div>
