adding google-site-verification meta tags in html

--- a/templates/mobile_error.html
+++ b/templates/mobile_error.html
@@ -4,6 +4,7 @@
       <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+      <meta name="google-site-verification" content="3pPynyswd2zxcDpBDGexeMBLBOF7YSRDfWISoZprttw" />
       <title>CazMouse</title>
   </head>
   <style>
