--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
       <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='heart.jpg') }}">
-      <link href="https://unpkg.com/nes.css/css/nes.min.css" rel="stylesheet" />
+      <link href="{{ url_for('static', filename='nes.css') }}" rel="stylesheet" />
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="google-site-verification" content="3pPynyswd2zxcDpBDGexeMBLBOF7YSRDfWISoZprttw" />
       <title>CazMouse</title>
