new windows program

--- a/templates/home.html
+++ b/templates/home.html
@@ -115,7 +115,7 @@ function showContent(content) {
       <div id="download" class="container is-rounded content display-none">
         <p>Pick one!</p>
         <div class="left">
-          <button class="btn btn-extra is-primary" onclick="location.href='/download/caz_mouse_for_windows.zip'">Windows</button>
+          <button class="btn btn-extra is-primary" onclick="location.href='/download/cazmouse_windows.exe'">Windows</button>
           <button class="btn btn-extra is-success" onclick="alert('sorry not available yet')">MacOS</button>
           <button class="btn btn-extra is-warning" onclick="alert('sorry not available yet')">Linux/Debian</button>
           <button class="btn btn-extra" onclick="showContent('home')">GO BACK</button>
